--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "firebase": "^10.8.0",
     "firebase-admin": "^11.11.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
