--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "firebase": "^10.8.0",
     "firebase-admin": "^11.11.1",
+    "formik": "^2.4.5",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
